[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Akrobat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://objects/textlist/GameEntry.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[node name="GameEntry" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
text = "Game Entry"
clip_text = true
script = ExtResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_GameEntry_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_GameEntry_gui_input"]
[connection signal="pressed" from="." to="." method="_on_GameEntry_pressed"]
